gitops/manifests/guestbook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    cert-manager.io/cluster-issuer: step-ca
spec:
  ingressClassName: traefik
  rules:
    - host: guestbook.home.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kustomize-guestbook-ui
                port:
                  number: 80
  tls:
    - hosts: [guestbook.home.lab]
      secretName: guestbook-tls
